add feign client test